@@ -10,7 +10,11 @@
 	* admin/CMakeModules/FindPkgConfig.cmake: filter out ENTER lines
 	
 	* CMakeLists.txt: better defines handling and more debugging output;
-	re-check backends if DLOPEN state changed
+	re-check back-end if its DLOPEN state changed; factor out code
+	
+	* admin/CMakeModules/FindConfigHelper.cmake: added
+	
+	* admin/CMakeModules/FindCompilerFlagsSet.cmake: added
 
 2006-01-18 Erik Hofman <erik@ehofman.com>
 
